[package]
name = "brightsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
reqwest = { version = "^0.12.5", features = ["blocking", "json"] }
chrono = "^0.4"
chrono-tz = "^0.9"
serde_json = "^1"
serde = { version = "^1.0", features = ["derive"] }
