[package]
name = "weatherdisplay-esp"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "weatherdisplay-esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-sys/native", "experimental"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc/std", "esp-idf-hal/std", "esp-idf-svc/std"]
alloc = ["embedded-svc/alloc", "esp-idf-hal/alloc", "esp-idf-svc/alloc"]
experimental = ["embedded-svc/experimental", "esp-idf-svc/experimental"]

[dependencies]
anyhow = "^1"
log = "^0.4"
esp-idf-sys = "^0.36"
esp-idf-hal = "^0.45"
esp-idf-svc = "^0.51"
embedded-svc = "^0.28"
epd-waveshare = "0.6.0"
chrono = "^0.4"
chrono-tz = { version = "^0.9" }

[build-dependencies]
embuild = "^0.33"
anyhow = "^1"
serde_json = "^1"
build-utils = { path = "../build-utils" }
